# takeitsmart

./: .gitignore  main.py  pyproject.toml
day1/: cleaned_raw_logs.csv  data science.txt  day1.ipynb  main.py
day2/: day2_E 03_02_2026.html
day3/: day3.ipynb
day4/: auto_report.txt  daily_report.txt  day_4_E 04_02_2026.html  employee.csv  employees.csv  log.txt  student.txt  summary.txt  user.txt
week 8/: ML_35_23-3.txt  ML_36_24-3.ipynb  ML_37_25-3.ipynb  ML_38_26-3.ipynb  ML_39_27-3.ipynb  ML_40_28-3.ipynb
week1/day1/: day1_E 02_02_2026.html  raw_logs.csv
week1/day2/: Task questions on operators,conditional statements and loopings.txt  day2.ipynb
week1/day3/: data.txt  day3.ipynb  day_3_E 04_02_2026.html
week1/day4/: atm_users.txt  daily_report_source.txt  day4.ipynb  report_template.txt  students.txt
week1/day5/: day4.ipynb  day_5_E 06_02_2026.html
week2/day10/: day10.ipynb  day_10_E 14_02_2026.html
week2/day6/: day6.ipynb  day_6_E 10_02_2026.html  filename.py
week2/day7/: day7.ipynb  day_7_E 11_02_2026.html  main.py
week2/day8/: day_8_E 12_02_2026.html
week2/day9/: day9.ipynb  day_9_E 13_02_2026.html
week3/: day_12_E 17_02_2026.html  day_14_E 19_02_2026.html
week3/day11/: day11.ipynb  day_11_E 16_02_2026.html
week3/day12/: notes.md
week3/day13/: day13.ipynb  day_13_E 18_02_2026.html
week3/day14/: day14.ipynb
week3/day15/: day15.ipynb  day_15_E 20_02_2026.html
week4/day15/: main.ipynb
week4/day16/: main.py  sales.csv
week4/day17/: main.ipynb
week4/day18/: app.py  day_18_E 25_02_2026.html  demo_app_dash.py  interactive_app.py
(+28 files in other folders)
