[project]
name = "Takeitsmart"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "gopal-nd",email = "docode999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "dash (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
